@@ -2751,7 +2751,7 @@ pkl_ast_type_incr_step (pkl_ast ast, pkl_ast_node type)
 
 static void
 pkl_ast_finish_returns_1 (pkl_ast_node function, pkl_ast_node stmt,
-                          int *nframes, int *ndrops, int *npopes)
+                          int *ndrops, int *npopes)
 {
   /* STMT can be a statement or a declaration.  */
 
@@ -2759,7 +2759,6 @@ pkl_ast_finish_returns_1 (pkl_ast_node function, pkl_ast_node stmt,
     {
     case PKL_AST_RETURN_STMT:
       PKL_AST_RETURN_STMT_FUNCTION (stmt) = function; /* Note no ASTREF.  */
-      PKL_AST_RETURN_STMT_NFRAMES (stmt) = *nframes;
       PKL_AST_RETURN_STMT_NDROPS (stmt) = *ndrops;
       PKL_AST_RETURN_STMT_NPOPES (stmt) = *npopes;
       break;
@@ -2767,23 +2766,19 @@ pkl_ast_finish_returns_1 (pkl_ast_node function, pkl_ast_node stmt,
       {
         pkl_ast_node t;
 
-        *nframes += 1;
         for (t = PKL_AST_COMP_STMT_STMTS (stmt); t;
              t = PKL_AST_CHAIN (t))
-          pkl_ast_finish_returns_1 (function, t, nframes, ndrops, npopes);
-
-        /* Pop the frame of the compound itself.  */
-        *nframes -= 1;
+          pkl_ast_finish_returns_1 (function, t, ndrops, npopes);
         break;
       }
     case PKL_AST_IF_STMT:
       pkl_ast_finish_returns_1 (function,
                                 PKL_AST_IF_STMT_THEN_STMT (stmt),
-                                nframes, ndrops, npopes);
+                                ndrops, npopes);
       if (PKL_AST_IF_STMT_ELSE_STMT (stmt))
         pkl_ast_finish_returns_1 (function,
                                   PKL_AST_IF_STMT_ELSE_STMT (stmt),
-                                  nframes, ndrops, npopes);
+                                  ndrops, npopes);
       break;
     case PKL_AST_LOOP_STMT:
       {
@@ -2791,7 +2786,7 @@ pkl_ast_finish_returns_1 (pkl_ast_node function, pkl_ast_node stmt,
           *ndrops += 3;
         pkl_ast_finish_returns_1 (function,
                                   PKL_AST_LOOP_STMT_BODY (stmt),
-                                  nframes, ndrops, npopes);
+                                  ndrops, npopes);
         if (PKL_AST_LOOP_STMT_ITERATOR (stmt))
           *ndrops -= 3;
         break;
@@ -2800,17 +2795,17 @@ pkl_ast_finish_returns_1 (pkl_ast_node function, pkl_ast_node stmt,
       *npopes += 1;
       pkl_ast_finish_returns_1 (function,
                                 PKL_AST_TRY_CATCH_STMT_CODE (stmt),
-                                nframes, ndrops, npopes);
+                                ndrops, npopes);
       *npopes -= 1;
       pkl_ast_finish_returns_1 (function,
                                 PKL_AST_TRY_CATCH_STMT_HANDLER (stmt),
-                                nframes, ndrops, npopes);
+                                ndrops, npopes);
       break;
     case PKL_AST_TRY_UNTIL_STMT:
       *npopes += 1;
       pkl_ast_finish_returns_1 (function,
                                 PKL_AST_TRY_UNTIL_STMT_CODE (stmt),
-                                nframes, ndrops, npopes);
+                                ndrops, npopes);
       *npopes -= 1;
       break;
     case PKL_AST_DECL:
@@ -2831,11 +2826,10 @@ pkl_ast_finish_returns_1 (pkl_ast_node function, pkl_ast_node stmt,
 void
 pkl_ast_finish_returns (pkl_ast_node function)
 {
-  int nframes = 0;
   int ndrops = 0;
   int npopes = 0;
   pkl_ast_finish_returns_1 (function, PKL_AST_FUNC_BODY (function),
-                            &nframes, &ndrops, &npopes);
+                            &ndrops, &npopes);
 }
 
 int
